# distributed-database-engine

./: .gitignore  Cargo.toml  MVP_REQUIREMENTS.md  README.md  REQUIREMENTS.md
benches/: consensus_bench.rs  storage_bench.rs
crates/client/: Cargo.toml
crates/client/src/: client.rs  error.rs  lib.rs
crates/consensus/: Cargo.toml
crates/consensus/src/: error.rs  lib.rs  raft.rs
crates/query/: Cargo.toml
crates/query/src/: error.rs  executor.rs  lib.rs  parser.rs  planner.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  error.rs  lib.rs  server.rs
crates/storage/: Cargo.toml
crates/storage/benches/: lsm_bench.rs
crates/storage/src/: cache.rs  compression.rs  error.rs  lib.rs  lsm.rs  memtable.rs  sstable.rs  wal.rs
crates/storage/tests/: lsm_tests.rs
crates/transaction/: Cargo.toml
crates/transaction/src/: error.rs  lib.rs  manager.rs  mvcc.rs
src/: error.rs  lib.rs  main.rs  types.rs
web/: dashboard.html
