[package]
name = "nextdb"
version = "0.1.0"
edition = "2021"
description = "Next-generation distributed database engine with LSM-tree storage and Raft consensus"
license = "MIT"
authors = ["NextDB Team"]
repository = "https://github.com/nextdb/nextdb"

[workspace]
members = [
    "crates/storage",
    "crates/consensus", 
    "crates/query",
    "crates/transaction",
    "crates/client",
    "crates/server"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
bytes = "1.5"
dashmap = "5.5"
parking_lot = "0.12"
crossbeam = "0.8"
once_cell = "1.19"
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "nextdb"
path = "src/main.rs"

[dependencies]
nextdb-storage = { path = "crates/storage" }
nextdb-consensus = { path = "crates/consensus" }
nextdb-query = { path = "crates/query" }
nextdb-transaction = { path = "crates/transaction" }
nextdb-client = { path = "crates/client" }
nextdb-server = { path = "crates/server" }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = "3.8"
proptest = "1.4"

[[bench]]
name = "storage_bench"
harness = false

[[bench]]
name = "consensus_bench"
harness = false

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
debug = true