[package]
name = "nextdb-consensus"
version = "0.1.0"
edition = "2021"
description = "Raft consensus implementation for NextDB"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
rand = "0.8"

[dev-dependencies]
tempfile = "3.8"
criterion = { workspace = true }