[package]
name = "nextdb-server"
version = "0.1.0"
edition = "2021"
description = "Server implementation for NextDB"

[dependencies]
nextdb-storage = { path = "../storage" }
nextdb-consensus = { path = "../consensus" }
nextdb-query = { path = "../query" }
nextdb-transaction = { path = "../transaction" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
hyper = "1.0"

[dev-dependencies]
criterion = { workspace = true }
tempfile = "3.8"