[package]
name = "nextdb-storage"
version = "0.1.0"
edition = "2021"
description = "LSM-tree based storage engine for NextDB"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
crossbeam = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }

# Storage-specific dependencies
lz4_flex = "0.11"
zstd = "0.13"
crc32fast = "1.3"
memmap2 = "0.9"

[dev-dependencies]
tempfile = "3.8"
criterion = { workspace = true }
proptest = "1.4"

[[bench]]
name = "lsm_bench"
harness = false